--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_USER=manivel@areta360.com
-EMAIL_PASS=kebj kaoo faia xmhz
+EMAIL_USER=admin@areta360.com
+EMAIL_PASS=opob fdfq ywrl dlna
 PORT=5000
