--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-EMAIL_USER=admin@areta360.com
-EMAIL_PASS=opob fdfq ywrl dlna
-PORT=5000
+   EMAIL=admin@areta360.com
+   PASSWORD=opob fdfq ywrl dlna 
+   HR_EMAIL=hr@areta360.com
+   HR_PASSWORD=eroy enyk gsey zaxl
+   PORT=5000
