--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "selfsigned": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
